Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-18650

Options deprecated in previous versions

    XMLWordPrintable

Details

    Description

      According to the KB as of 2019-02-19, at least the following options / variables have been deprecated, but not mentioned as removed:

      option / variable first version where it was deprecated removed in 10.5 by
      --log-bin-trust-routine-creators 5.0.16 (MySQL) ? 5.5.20 alpha
      --delay-key-write-for-all-tables 5.0 (MySQL) 5.5.20 alpha
      --default-collation 5.0 (MySQL) 5.5.20 alpha
      --enable-locking 5.0 (MySQL) 5.5.20 alpha
      --log-long-format 5.0 (MySQL) 5.5.20 alpha
      --log-update 5.0 (MySQL) 5.5.20 alpha
      --one-thread ? MDEV-4865
      --set-variable 5.0 (MySQL) 5.5.20 alpha
      --skip-locking 5.0 (MySQL) 5.5.20 alpha
      --use-symbolic-links 5.0 (MySQL) 5.5.20 alpha
      --warnings 5.0 (MySQL) 5.5.20 alpha
      max_long_data_size 5.5 MDEV-7481
      multi_range_count 5.1, ignored from 5.3  
      optimizer_switch.engine_condition_pushdown 10.1.1  
      storage_engine 5.5 - in variable description, not with Warning MDEV-21475
      thread_concurrency 5.5  
      timed_mutexes 5.5.39  
      mroonga_default_parser mroonga 5.04  
      innodb_buffer_pool_populate 10.0.23  
      innodb_checksums 10.0 MDEV-19534
      innodb_cleaner_lsn_age_factor 10.2.6  
      innodb_corrupt_table_action 10.2.6  
      innodb_empty_free_list_algorithm 10.2.6  
      innodb_fake_changes 10.2.6  
      innodb_foreground_preflush 10.2.6  
      innodb_kill_idle_transaction 10.2.6  
      innodb_locking_fake_changes 10.2.6  
      innodb_locks_unsafe_for_binlog 10.0 MDEV-19544
      innodb_log_arch_dir 10.2.6  
      innodb_log_arch_expire_sec 10.2.6  
      innodb_log_archive 10.2.6  
      innodb_log_block_size 10.2.6  
      innodb_log_checksum_algorithm 10.2.6  
      innodb_max_bitmap_file_size 10.2.6  
      innodb_max_changed_pages 10.2.6  
      innodb_rollback_segments 10.0 MDEV-19570
      innodb_sched_priority_cleaner 10.2.6  
      innodb_show_locks_held 10.2.6  
      innodb_show_verbose_locks 10.2.6  
      innodb_stats_sample_pages 10.0 MDEV-19551
      innodb_track_changed_pages 10.2.6  
      innodb_track_redo_log_now 10.2.6  
      innodb_use_global_flush_log_at_trx_commit 10.2.6  
      innodb_use_stacktrace 10.2.6  

      At some point, a cleanup needs to be done: either we should remove them, or we should introduce a concept of eternal deprecation, when an option/variable is accepted on startup (with a warning), but is otherwise ignored – cannot be seen or set or used at runtime.

      Attachments

        Issue Links

          Activity

            People

              cvicentiu Vicențiu Ciorbaru
              elenst Elena Stepanova
              Votes:
              0 Vote for this issue
              Watchers:
              9 Start watching this issue

              Dates

                Created:
                Updated:
                Resolved:

                Time Tracking

                  Estimated:
                  Original Estimate - 5d
                  5d
                  Remaining:
                  Remaining Estimate - 0d
                  0d
                  Logged:
                  Time Spent - 3d 5h Time Not Required
                  3d 5h

                  Git Integration

                    Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.