MDEV-18650: Options deprecated in previous versions - multi_range_count

Remove deprecated system variable multi_range_count. It was ignored from 5.3.